# mLearn

./: .asm-lsp.toml  README.md
boot/: .clangd  .gdbinit  openocd.cfg
boot/bootLib/: main.cpp  mcu.cpp  reg.cpp  startup.cpp  stm32f7xx_it.c  syscalls.cpp
boot/bootLib/include/: reg.hpp
boot/cmake/: CMakeLists.txt  arm-none-eabi.cmake  stm32f745vetx_flash.ld
boot/device/: CMakeLists.txt
boot/device/lib/: CMakeLists.txt
boot/src/: main.cpp
test/: .clang-format  .gdbinit  compile_commands.json
test/app/src/: main.cpp
test/bootLib/: irq.cpp  main.cpp  syscalls.cpp
test/bootLib/CMSIS/src/: syscalls.cpp  system_startup_CMSIS.cpp
test/bootLib/SEGGER/: SEGGER_RTT.cpp  SEGGER_RTT_printf.cpp
test/bootLib/SEGGER/include/: SEGGER_RTT_Conf.hpp
test/bootLib/SEGGER/src/: SEGGER_RTT_ASM_ARMv7M.s
test/bootLib/core/include/: clock.hpp  debug.hpp  gpio.hpp  irq.hpp  pwr.hpp  reg.hpp  sys.hpp
test/bootLib/core/src/: clock.cpp  debug.cpp  gpio.cpp  irq.cpp  main.cpp  pwr.cpp  sys.cpp
test/bootLib/include/: gpio.hpp  reg.hpp  sys.hpp
test/bootLib/include/CMSIS/: stm32f767xx.h
test/bootLib/include/SEGGER/: SEGGER_RTT.hpp  SEGGER_RTT_Conf.hpp
test/cmake/: CMakeLists.txt  arm-none-eabi.cmake  stm32f767zitx_flash.ld
test/cmake/bootLib/: CMakeLists.txt
test/segger/: test.jdebug
test/src/: main.cpp
